resource limit: Fix resource limit check on VM start